[gd_scene load_steps=17 format=2]

[ext_resource path="res://Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprite/home-room-1.png" type="Texture" id=2]
[ext_resource path="res://scene.gd" type="Script" id=3]
[ext_resource path="res://lamp.tscn" type="PackedScene" id=4]
[ext_resource path="res://monitor.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 40, 70 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14, 14 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 28 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16, 11 )

[sub_resource type="CircleShape2D" id=10]
radius = 10.0499

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5, 6 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 2, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 58, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 54, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 52, 24 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 0, 104 )
limit_left = -300
limit_top = -540
limit_right = 300
limit_bottom = 166

[node name="Door" parent="." instance=ExtResource( 1 )]
position = Vector2( -88, -29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
shape = SubResource( 7 )

[node name="Poster" parent="." instance=ExtResource( 1 )]
position = Vector2( -269, -73 )
text = "bn poster"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Poster"]
shape = SubResource( 8 )

[node name="Poster2" parent="." instance=ExtResource( 1 )]
position = Vector2( -216, -70 )
text = "mcr poster"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Poster2"]
shape = SubResource( 9 )

[node name="photo" parent="." instance=ExtResource( 1 )]
position = Vector2( 57, -65 )
text = "photo"

[node name="CollisionShape2D" type="CollisionShape2D" parent="photo"]
shape = SubResource( 11 )

[node name="toy" parent="." instance=ExtResource( 1 )]
position = Vector2( 114, -27 )
text = "toy bear"

[node name="CollisionShape2D" type="CollisionShape2D" parent="toy"]
shape = SubResource( 10 )

[node name="pants" parent="." instance=ExtResource( 1 )]
position = Vector2( 148, 52 )
text = "my pants"

[node name="CollisionShape2D" type="CollisionShape2D" parent="pants"]
shape = SubResource( 12 )

[node name="pills" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 31 )
text = "pills"

[node name="CollisionShape2D" type="CollisionShape2D" parent="pills"]
shape = SubResource( 13 )

[node name="BigSofa" type="StaticBody2D" parent="."]
position = Vector2( 80, 52 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigSofa"]
shape = SubResource( 3 )

[node name="LittleSofa" type="StaticBody2D" parent="."]
position = Vector2( 284, 68 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LittleSofa"]
shape = SubResource( 4 )

[node name="Bed" type="StaticBody2D" parent="."]
position = Vector2( 214, 54 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed"]
shape = SubResource( 5 )

[node name="Table" type="StaticBody2D" parent="."]
position = Vector2( -248, 64 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table"]
shape = SubResource( 6 )

[node name="max_top" type="Position2D" parent="."]
position = Vector2( 0, 50 )

[node name="max_bottom" type="Position2D" parent="."]
position = Vector2( 0, 164 )

[node name="max_right" type="Position2D" parent="."]
position = Vector2( 280, 0 )

[node name="max_left" type="Position2D" parent="."]
position = Vector2( -280, 0 )

[node name="spawn" type="Position2D" parent="."]
position = Vector2( 0, 104 )

[node name="lamp" parent="." instance=ExtResource( 4 )]
position = Vector2( 216, -52 )
frame = 2

[node name="monitor" parent="." instance=ExtResource( 5 )]
position = Vector2( -276, 2 )
frame = 3
